# qml-file-watcher-attached-property

./: CMakeLists.txt  Main.qml  filewatcher.cpp  filewatcher.h  main.cpp
